[package]
name = "server-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
tarpc = { version = "0.30.0", features = ["full"] }
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread"] }
anyhow = "1.0"
futures = "0.3"
sysinfo = "0.26.6"

[lib]
name = "service"
path = "src/lib.rs"

[[bin]]
name = "server"
path = "src/server.rs"
